# jump_attribution

./: flake.nix  local-bib.bib  mac_bibliography.bib  project_onboarding.html  project_onboarding.org  pyproject.toml  readme.org  requirements.txt
.github/workflows/: duplicate-code-detection.yml
workspace/analysis/: 2024_11_30_csv_to_parquet.py  2024_11_30_marimo_explorer.py  Jump_portrait.ipynb  attribution.py  conv_model.py  cu_features_engineering.py  custom_dataset.py  data_split.py  data_v2.py  filter_image.py  gans_profiles.ipynb  gans_profiles_script.py  get_features.py  image_classifier.ipynb  image_classifier_script.py  jump_compound_filtering.ipynb  lightning_parallel_training.py  mAP_calculations.ipynb  naive_classifier_profiles.ipynb  parallel_training.py  target2.ipynb  tutorial_get_features.ipynb
workspace/analysis/Data_filtering/: Target2_active.ipynb  data_v2.py  features_engineering.py  jump_compound_filtering.ipynb  plot_distribution_table.py  target2.ipynb
