[tool.poetry]
name = "torch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
polars = "*"
broad-babel = "^0.1.22"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"
s3fs = "^2024.6.1"
umap-learn = "^0.5.6"
xgboost = "^2.1.0"
tune-sklearn = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
ruff-lsp = "^0.0.54"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
